# Tippi

./: .gitignore  CMakeLists.txt  Doxyfile
Data/: test_partner.net  test_partner_dl.net  test_partner_simple.net  test_partner_simple_inverse.net
Mac/: MPP.cpp  MPP.h  MPPEdge.cpp  MPPEdge.h  MPPState.cpp  MPPState.h
Mac/Tippi.xcodeproj/: project.pbxproj
Source/: main.cpp
Source/Algorithms/: ConstructBehavior.cpp  ConstructBehavior.h  ConstructEnvironment.cpp  ConstructEnvironment.h  ConstructMPP.cpp  ConstructMPP.h  ConvertBehaviorToDot.cpp  ConvertBehaviorToDot.h  ConvertMPPToDot.cpp  ConvertMPPToDot.h  RemoveDeadlocksFromMPP.cpp  RemoveDeadlocksFromMPP.h
Source/Behavior/: Behavior.cpp  Behavior.h  BehaviorEdge.cpp  BehaviorEdge.h  BehaviorState.cpp  BehaviorState.h
Source/Graph/: GraphAlgorithms.h  GraphEdge.h  GraphNode.h
Source/MPP/: MPP.cpp  MPP.h  MPPState.cpp  MPPState.h
Source/Net/: Arc.h  FiringRule.cpp  FiringRule.h  LolaNetParser.cpp  LolaNetParser.h  Net.cpp  Net.h  NetNode.cpp  NetNode.h  NetNodeStore.h  NetState.h  NetTypes.h  Place.h  PlaceMarking.h  TimeMarking.cpp  TimeMarking.h  Transition.cpp  Transition.h
apps/: chksim.cpp  net2beh.cpp  net2cl.cpp
cmake/: GetOpt.cmake  Utils.cmake
src/: Automaton.cpp  Automaton.h  Automaton2Text.h  Behavior.cpp  Behavior.h  Behavior2Dot.cpp  Behavior2Dot.h  Closure.cpp  Closure.h  ClosureAutomaton.cpp  ClosureAutomaton.h  CollectionUtils.h  ConstructBehavior.cpp  ConstructBehavior.h  ConstructClosureAutomaton.cpp  ConstructClosureAutomaton.h  ConstructMaximalNet.cpp  ConstructRegionAutomaton.cpp  ConstructRegionAutomaton.h  Exceptions.h  GraphAlgorithms.h  GraphEdge.h  GraphNode.h  IntervalNet.cpp  IntervalNet.h  IntervalNetFiringRule.cpp  IntervalNetFiringRule.h  IntervalNetParser.cpp  IntervalNetState.cpp  IntervalNetState.h  LoadIntervalNet.cpp  LoadIntervalNet.h  MarkUnsafeStates.cpp  MarkUnsafeStates.h  Marking.cpp  Marking.h  Parser.h  Region.cpp  Region.h  RemoveDeadlocks.cpp  (+21 more)
src/Filter/: ConstructBehavior.cpp  ConstructBehavior.h  ConstructClosureAutomaton.cpp  ConstructClosureAutomaton.h  ConstructMaximalNet.cpp  ConstructMaximalNet.h  ConstructMaximalNetFilter.cpp  ConstructMaximalNetFilter.h  ConstructRegionAutomaton.cpp  ConstructRegionAutomaton.h  IntervalNetDotFilter.cpp  IntervalNetDotFilter.h  LoadIntervalNet.cpp  LoadIntervalNet.h  LoadIntervalNetFilter.cpp  LoadIntervalNetFilter.h  ReduceClosureAutomaton.cpp  ReduceClosureAutomaton.h  RemoveDeadlocks.cpp  RemoveDeadlocks.h  RemoveUnreachableStates.cpp  RemoveUnreachableStates.h  RenderBehavior.cpp  RenderBehavior.h  RenderClosureAutomaton.cpp  RenderClosureAutomaton.h  RenderIntervalNet.cpp  RenderIntervalNet.h  RenderRegionAutomaton.cpp  RenderRegionAutomaton.h
src/Graph/: GraphAlgorithms.h  GraphEdge.h  GraphNode.h  GraphNodeStore.h
src/Net/: IntervalNet.cpp  IntervalNet.h  IntervalNetFiringRule.cpp  IntervalNetFiringRule.h  IntervalNetParser.cpp  IntervalNetParser.h  IntervalNetState.cpp  IntervalNetState.h  LolaNetParser.cpp  LolaNetParser.h  Marking.cpp  Marking.h  NetNode.cpp  NetNode.h  TimeInterval.cpp  TimeInterval.h
test/data/: Durst.net  cookie.net  cyclic.net  cyclic2.net  cyclic3_avoidable_final_livelock.net  cyclic3_unavoidable_final_livelock.net  cyclic3_with_time.net  cyclic4.net  innerlivelock.net  test.net  test2.net  test2_inverted.net  test2_service_decides.net  test2_service_decides_potential_partner.net  test2_service_decides_potential_partner2.net  test3.net  test4.net  test5.net  test_partner.net  test_partner_t3_inf.net
test/src/: BehaviorTest.cpp  CollectionUtilsTest.cpp  IntervalNetTest.cpp  RunAllTests.cpp  SimpleAutomatonParserTest.cpp  StringUtilsTest.cpp  TimeIntervalTest.cpp
test/src/Filter/: ConstructBehaviorTest.cpp  ConstructClosureAutomatonTest.cpp
test/src/Net/: IntervalNetFiringRuleExecutionTest.cpp  IntervalNetFiringRuleTest.cpp  IntervalNetParserTest.cpp  IntervalNetStateTest.cpp  IntervalNetTest.cpp  TimeIntervalTest.cpp
